--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "react-spring": "^9.7.1",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.7.5",
+    "three": "^0.152.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
+    "@types/three": "^0.152.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
